--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,3 @@
-os:
-  - linux
-  - osx
-  - windows
 language: go
 go:
 - 1.4
@@ -11,10 +7,13 @@ before_install:
   - go get github.com/mattn/goveralls
   - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 script:
-  - '[ "${TRAVIS_PULL_REQUEST}" != "false" && "${TRAVIS_OS_NAME}" == "linux" ] || $HOME/gopath/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN'
+  - '( [ "${TRAVIS_PULL_REQUEST}" != "false" ] && [ "${TRAVIS_OS}" != "linux" ] ) || $HOME/gopath/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN'
   - $HOME/gopath/bin/golint ./...
   - go vet
   - go test -v ./...
+os:
+  - linux
+  - osx
 notifications:
   email:
     on_success: never
