--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,10 @@ before_install:
   - go get github.com/mattn/goveralls
   - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 script:
-  - '( [ "${TRAVIS_PULL_REQUEST}" != "false" ] && [ "${TRAVIS_OS}" != "linux" ] ) || $HOME/gopath/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN'
+  - '[ "${TRAVIS_PULL_REQUEST}" != "false" ] || $HOME/gopath/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN'
   - $HOME/gopath/bin/golint ./...
   - go vet
   - go test -v ./...
-os:
-  - linux
-  - osx
 notifications:
   email:
     on_success: never
